--- a/_posts/2017-04-16-算法时间空间复杂度.md
+++ b/_posts/2017-04-16-算法时间空间复杂度.md
@@ -1,7 +1,7 @@
 ---
 title:  算法时间空间复杂度
 date:   2017-04-16
-categories: [Data Struct, Base]
+categories: [Data Struct, Time Space Complexity]
 tags: [Data Struct]
 ---
 
